tests/lean/match1.lean.expected.out
---- h1
10
---- h2
3
10
0
---- h3
10
30
4
---- inv
10
match1.lean:82:0: error: type mismatch during dependent match-elimination at pattern variable 'w' with type
  VecPred P Vec.nil
expected type
  VecPred P tail✝
[false, true, true]
match1.lean:113:0: error: dependent match elimination failed, inaccessible pattern found
  .(j + j)
constructor expected
[false, true, true]
match1.lean:124:0: error: invalid match-expression, type of pattern variable 'a' contains metavariables
  ?m
fun (x : ?m × ?m) => ?m x : ?m × ?m → ?m
fun (x : Nat × Nat) =>
  match x with 
  | (a, b) => a + b : Nat × Nat → Nat
fun (x : Bool × Bool) =>
  match x with 
  | (a, b) => a && b : Bool × Bool → Bool
fun (x : Nat × Nat) =>
  match x with 
  | (a, b) => a + b : Nat × Nat → Nat
fun (x x_1 : Option Nat) =>
  match x, x_1 with 
  | some a, some b => some (a + b)
  | x_2, x_3 => none : Option Nat → Option Nat → Option Nat
fun (x : Nat) =>
  (match x with 
    | 0 => id
    | Nat.succ x_1 => id)
    x : Nat → Nat
fun (x : Array Nat) =>
  match x with 
  | #[1,2] => 2
  | #[] => 0
  | #[3,4,5] => 3
  | x_1 => 4 : Array Nat → Nat
